# nups

./: .gitignore  CMakeLists.txt  INSTALL_CMAKE  Makefile.am  configure.ac  nups.sublime-project
doc/: nups.doxy.config
include/nups/: factor.hpp  linear_solve.hpp  nups.hpp  polynomial_solve.hpp  predict.hpp  solve.hpp  type_traits.hpp
m4/: ax_boost_unit_test_framework.m4
src/: Makemodule.am  nups.cpp
test/: Makemodule.am  common.cpp  nups_test.cpp  using_valarrays.cpp  using_vectors.cpp
